--- a/CSS/screens/more.css
+++ b/CSS/screens/more.css
@@ -1,11 +1,6 @@
-.more-screen .icon-row {
-  margin-top: 35px;
-}
-
 .more-suggestions {
-  margin-top: 50px;
+  padding: var(--horizontal-space);
   border-top: var(--main-border);
-  padding-top: 40px;
 }
 
 .more-suggestions__title {
@@ -37,4 +32,8 @@
 .more-suggestions__icon-image {
   font-size: 32px;
   color: white;
+}
+
+.icon-row {
+  margin-top: 40px;
 }
