real-final_kokoa

--- a/CSS/components/alt-screen-header.css
+++ b/CSS/components/alt-screen-header.css
@@ -1,5 +1,6 @@
 .alt-header {
   padding: var(--horizontal-space);
+  margin-top: 30px;
   margin-bottom: 15px;
   display: flex;
   align-items: center;
