--- a/CSS/screens/login.css
+++ b/CSS/screens/login.css
@@ -1,5 +1,5 @@
 .welcome-header {
-  margin: 70px 0px;
+  margin: 150px 0px 70px 0;
   text-align: center;
   display: flex;
   flex-direction: column;
