byungsoo's kokoa talk

--- a/CSS/screens/chat.css
+++ b/CSS/screens/chat.css
@@ -44,7 +44,7 @@
   padding: 15px;
   font-size: 14px;
   border-radius: 25px;
-  margin-bottom: 25px;
+  margin: 25px 0px;
 }
 @keyframes leftMessageFadeIn {
   from {
